<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.ivanmarincic.nastava.dataaccess.model.NastavniPlan" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
                style="@style/Widget.Nastava.AppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_back" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/values_barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="end"
                        app:constraint_referenced_ids="predavanjaLabel,vejzbeLabel,seminariLabel,ectsLabel" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:textAppearance="@style/TextAppearance.DetailsTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textCompat="@{viewModel.ptiId.naziv}"
                        tools:text="MATEMTIKA" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/predavanjaLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:layout_marginBottom="@dimen/spacing_normal"
                        android:text="@string/details_predavanja"
                        android:textAppearance="?textAppearanceBody2"
                        android:textStyle=""
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/predavanjaValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintBottom_toBottomOf="@+id/predavanjaLabel"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/values_barrier"
                        app:layout_constraintTop_toTopOf="@+id/predavanjaLabel"
                        app:textCompat="@{viewModel.opterecenjePredavanja}"
                        tools:text="0" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/vejzbeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:text="@string/details_vjezbe"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintHorizontal_bias="0.85"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/predavanjaLabel" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/vejzbeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintBottom_toBottomOf="@+id/vejzbeLabel"
                        app:layout_constraintStart_toEndOf="@+id/values_barrier"
                        app:layout_constraintTop_toTopOf="@+id/vejzbeLabel"
                        app:textCompat="@{viewModel.opterecenjeVjezbe}"
                        tools:text="0" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/seminariLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:text="@string/details_seminari"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintHorizontal_bias="0.15"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/vejzbeLabel" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/seminariValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintBottom_toBottomOf="@+id/seminariLabel"
                        app:layout_constraintStart_toEndOf="@+id/values_barrier"
                        app:layout_constraintTop_toTopOf="@+id/seminariLabel"
                        app:textCompat="@{viewModel.opterecenjeSeminari}"
                        tools:text="0" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/ectsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:text="@string/details_ects"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintHorizontal_bias="0.85"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/seminariLabel" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/ectsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintBottom_toBottomOf="@+id/ectsLabel"
                        app:layout_constraintStart_toEndOf="@+id/values_barrier"
                        app:layout_constraintTop_toTopOf="@+id/ectsLabel"
                        app:textCompat="@{viewModel.ectsBodovi}"
                        tools:text="0" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/nastavnikLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:layout_marginBottom="@dimen/spacing_normal"
                        android:text="Nastavnik"
                        android:textAppearance="@style/TextAppearance.Overline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ectsLabel" />

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/nastavnikImage"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="1:1"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:layout_marginEnd="@dimen/spacing_normal"
                        app:layout_constraintBottom_toBottomOf="@+id/nastavnikEmail"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/nastavnikIme"
                        app:srcCompat="@drawable/ic_avatar_placeholder" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/nastavnikIme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:layout_marginBottom="@dimen/spacing_normal"
                        android:textAppearance="?textAppearanceListItem"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/nastavnikImage"
                        app:layout_constraintTop_toBottomOf="@+id/nastavnikLabel"
                        app:textCompat="@{viewModel.nositeljId.punoIme}"
                        tools:text="Ivan Ivic" />


                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/nastavnikEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:layout_marginEnd="@dimen/spacing_normal"
                        android:layout_marginBottom="@dimen/spacing_normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/nastavnikImage"
                        app:layout_constraintTop_toBottomOf="@+id/nastavnikIme"
                        app:textCompat="@{viewModel.nositeljId.eMail}"
                        tools:text="ivan.ivic@gmail.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>